# distance-field-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  _build_windows.bat  _generate_windows.bat  _run_windows.bat  _setup_windows.bat  setup.bat  setup_windows.bat
cmake/: directories.cmake  (+2 more)
source/: CMakeLists.txt
source/include/1_foundations/rex_core/: application.h  application_arguments.h  application_arguments_parser.h  core_application.h  core_application_loop.h  core_context.h  core_window.h  core_window_flags.h  display.h  display_manager.h  entry_point.h  layer.h  layer_stack.h  rex_core_pch.h  types.h  window.h  world.h
source/include/1_foundations/rex_core/frameinfo/: deltatime.h  fps.h  frameinfo.h
source/include/1_foundations/rex_diagnostics/: rex_debug.h  rex_diagnostics_pch.h
source/include/1_foundations/rex_events/: event.h  event_bus.h  event_category.h  event_dispatcher.h  event_queue.h  rex_events_pch.h
source/include/1_foundations/rex_graphics/: aspect_ratio.h  buffer_usage.h  camera.h  clipping_planes.h  data_type_helper.h  field_of_view.h  mesh.h  mesh_factory.h  model.h  model_library.h  orthographic_camera.h  perspective_camera.h  rex_graphics_pch.h  submesh.h  triangle.h  usage.h  vertex.h
source/include/1_foundations/rex_hid/: input.h  rex_hid_pch.h
source/include/1_foundations/rex_io/: file_export.h  file_import.h  file_memory.h  rex_io_pch.h  token_parser.h
source/include/1_foundations/rex_math/: closest_divisible_integer.h  common.h  deg_angle.h  geometric.h  is_power_of_two.h  matrix.h  matrix_clip_space.h  matrix_transform.h  min_max.h  point.h  quaternion.h  quaternion_geometric.h  rad_angle.h  rect.h  rex_math_pch.h  transform.h  vec2.h  vec3.h  vec4.h
source/include/1_foundations/rex_memory/: blob.h  blobreader.h  blobwriter.h  data_type.h  memory_size.h  pointer_math.h  rex_memory_pch.h
source/include/1_foundations/rex_scenegraph/: rex_scenegraph_pch.h  scene_renderer.h
source/include/1_foundations/rex_std/: rex_std_pch.h  scope_guard.h
source/include/1_foundations/rex_utilities/: api_type.h  architecture.h  color.h  defines.h  named_type.h  rex_utilities_pch.h  types.h  yes_no_enum.h  yesnoenum.h
source/include/2_platform/rex_windows/: display.h  display_mode.h  rex_windows_pch.h  win32_application.h  win32_application_loop.h  win32_context.h  win32_event_handler.h  win32_event_processor.h  win32_window.h
source/include/3_tools/regina/: deferred_rendering_layer.h  distance_field_rendering_layer.h  forward_rendering_layer.h  geometry_rendering_layer.h  heatmap_rendering_layer.h  hybrid_rendering_layer.h  lattice.h  lattice_importer.h  lattice_library.h  lattice_meta.h  lattice_meta_parser.h  lattice_rendering_layer.h  model_importer.h  mouse_orbit_camera_controller.h  orbit_camera.h  orbit_camera_controller.h  regina.h  regina_layer.h  regina_pch.h  shortcut_layer.h  texture_importer.h  volume.h  volume_importer.h  volume_library.h  volume_meta.h  volume_meta_parser.h  volume_rendering_layer.h
source/modules/: CMakeLists.txt
source/modules/foundations/: CMakeLists.txt
source/modules/foundations/core/: CMakeLists.txt
source/modules/foundations/glad/: CMakeLists.txt
source/src/1_foundations/rex_core/: application.cpp  application_arguments.cpp  application_arguments_parser.cpp  core_application.cpp  core_application_loop.cpp  core_context.cpp  core_window.cpp  core_window_flags.cpp  display.cpp  display_manager.cpp  display_mode.cpp  entry_point.cpp  layer.cpp  layer_stack.cpp  rex_core_pch.cpp  types.cpp  window.cpp  world.cpp
source/src/1_foundations/rex_diagnostics/: rex_debug.cpp  rex_diagnostics_pch.cpp
source/src/1_foundations/rex_events/: event.cpp  event_bus.cpp  event_category.cpp  event_dispatcher.cpp  event_queue.cpp  rex_events_pch.cpp
source/src/1_foundations/rex_glad/: rex_glad_pch.cpp
source/src/1_foundations/rex_graphics/: aspect_ratio.cpp  buffer_usage.cpp  camera.cpp  data_type_helper.cpp  directional_light.cpp  field_of_view.cpp  mesh.cpp  mesh_factory.cpp  model.cpp  model_library.cpp  orthographic_camera.cpp  perspective_camera.cpp  point_light.cpp  rex_graphics_pch.cpp  submesh.cpp  triangle.cpp  vertex.cpp
source/src/1_foundations/rex_hid/: input.cpp  rex_hid_pch.cpp
source/src/1_foundations/rex_io/: file_export.cpp  file_import.cpp  file_memory.cpp  rex_io_pch.cpp  token_parser.cpp
source/src/1_foundations/rex_math/: closest_divisible_integer.cpp  common.cpp  deg_angle.cpp  geometric.cpp  is_power_of_two.cpp  matrix.cpp  matrix_clip_space.cpp  matrix_transform.cpp  min_max.cpp  point.cpp  quaternion.cpp  quaternion_geometric.cpp  rad_angle.cpp  rect.cpp  rex_math_pch.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp
source/src/1_foundations/rex_memory/: blob.cpp  blob_reader.cpp  blob_writer.cpp  data_type.cpp  memory_size.cpp  rex_memory_pch.cpp
source/src/1_foundations/rex_scenegraph/: rex_scenegraph_pch.cpp  scene_renderer.cpp
source/src/1_foundations/rex_std/: rex_std_pch.cpp  scope_guard.cpp
source/src/1_foundations/rex_utilities/: api_type.cpp  architecture.cpp  color.cpp  defines.cpp  named_type.cpp  rex_utilities_pch.cpp  types.cpp  yes_no_enum.cpp  yesnoenum.cpp
source/src/2_platform/rex_windows/: display.cpp  display_manager.cpp  display_mode.cpp  rex_windows_pch.cpp  win32_application.cpp  win32_application_loop.cpp  win32_context.cpp  win32_event_handler.cpp  win32_event_processor.cpp  win32_window.cpp
source/src/3_tools/regina/: deferred_rendering_layer.cpp  distance_field_rendering_layer.cpp  forward_rendering_layer.cpp  geometry_rendering_layer.cpp  heatmap_rendering_layer.cpp  hybrid_rendering_layer.cpp  lattice.cpp  lattice_importer.cpp  lattice_library.cpp  lattice_meta.cpp  lattice_meta_parser.cpp  lattice_rendering_layer.cpp  model_importer.cpp  mouse_orbit_camera_controller.cpp  orbit_camera.cpp  orbit_camera_controller.cpp  regina.cpp  regina_layer.cpp  regina_pch.cpp  shortcut_layer.cpp  texture_importer.cpp  volume.cpp  volume_importer.cpp  volume_library.cpp  volume_meta.cpp  volume_meta_parser.cpp  volume_rendering_layer.cpp
(+388 files in other folders)
